--- a/src/features/restaurants/views/details/schedule/style.module.css
+++ b/src/features/restaurants/views/details/schedule/style.module.css
@@ -11,6 +11,7 @@
 }
 
 .table {
+  table-layout: fixed;
   width: 98%;
 }
 
